--- a/index.html
+++ b/index.html
@@ -2342,7 +2342,7 @@ refreshBtn.addEventListener('click', fetchHitokoto);
 </div>
 <div class="sub-group" style="flex-direction: row; gap: 10px;">
 <div class="node level-3"><a href="https://kenchan20141.github.io/AIChinese2/" data-tool-id="sansi-backup">神思 (備用)</a></div>
-<div class="node level-3"><a href="https://sansi.vercel.app/" data-tool-id="sansi-v3">神思 (V3)</a></div>
+<div class="node level-3"><a href="https://sansi.vercel.app/" data-tool-id="sansi-v3">神思 (主網)</a></div>
 </div>
 </div>
 
